--- a/projects/notifications-playground/static-src/index.html
+++ b/projects/notifications-playground/static-src/index.html
@@ -3,6 +3,9 @@
     <p>Trying out the component</p>
     <notification-dialog></notification-dialog>
 
-    <script src="main-es5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.6.11/core.min.js"></script>
+    <script src="webcomponents-bundle.js"></script>
+    <script src="custom-elements-es5-adapter.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
