adding material , some features and some styles

--- a/projects/notifications-playground/static-src/index.html
+++ b/projects/notifications-playground/static-src/index.html
@@ -7,5 +7,7 @@
     <script src="webcomponents-bundle.js"></script>
     <script src="custom-elements-es5-adapter.js"></script>
     <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </body>
 </html>
