--- a/elements/index.html
+++ b/elements/index.html
@@ -3,6 +3,11 @@
     <p>Trying out the component</p>
     <notification-dialog></notification-dialog>
 
-    <script src="main-es5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.6.11/core.min.js"></script>
+    <script src="webcomponents-bundle.js"></script>
+    <script src="custom-elements-es5-adapter.js"></script>
+    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </body>
 </html>
