--- a/projects/notifications-playground/static-src/index.html
+++ b/projects/notifications-playground/static-src/index.html
@@ -1,12 +1,19 @@
 <html>
   <body>
     <p>Trying out the component</p>
+
+    <!-- The element itself  -->
     <notification-dialog></notification-dialog>
 
+    <!-- Polyfills (Add-once files for it to work in IE)  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.6.11/core.min.js"></script>
     <script src="webcomponents-bundle.js"></script>
     <script src="custom-elements-es5-adapter.js"></script>
+
+    <!-- The element JS  -->
     <script src="main.js"></script>
+
+    <!-- extra fonts for google material -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </body>
